# 3D-sensor-robot-arm-simulation

./: .gitignore  README.md
motoman_resources/: CMakeLists.txt  package.xml
my_arm_robot_controller/: CMakeLists.txt  package.xml
my_arm_robot_controller/_test_commands/: send_2grippers_open_command.py
my_arm_robot_controller/config/: arm_robot_conrollers.yaml
my_arm_robot_controller/launch/: conroller.launch.py
my_arm_robot_description/: CMakeLists.txt  package.xml
my_arm_robot_description/launch/: display.launch.py  gazebo.launch.py
my_arm_robot_description/rviz/: display.rviz
my_arm_robot_description/urdf/: arm_robot_gazebo.urdf.xacro  arm_robot_ros2_control.urdf.xacro  model.urdf.xacro
point_cloud_processing/: CMakeLists.txt  package.xml
point_cloud_processing/data/: convert.py  plane_segmented.pcd
point_cloud_processing/src/: circular_point.cpp  correspondence_grouping.cpp
rt1_jax/: action_client.py  app.py  load_policy.py
src/: README.md
src/binpicking_client/: CMakeLists.txt  package.xml
src/binpicking_client/src/: binpicking_client_node.cpp
src/fs100_controller_py/: package.xml  setup.cfg  setup.py
src/fs100_controller_py/fs100/: positions.json  read_robot_pose.py  reset_alarm.py  sim_robot_pose.py  task_client_demo.py  task_server.py  task_server_demo.py  test_command.py
src/fs100_controller_py/launch/: demo.launch.py
src/images/: voxel_filtered_can5.pcd
src/images/pcd/: plane_segmented_can5.pcd
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/point_cloud_processing/data/: bunny.py  bunny.stl  check_pcd.py
src/point_cloud_processing/src/: filtering_segmentation.cpp  pass_through.cpp
src/robot_bringup/: CMakeLists.txt
src/robot_bringup/launch/: robot_simulation.launch.py
src/robotic_3dsensor/: package.xml  setup.cfg  setup.py
src/robotic_3dsensor/robotic_3dsensor/: ftp_node.py
src/robotic_action/: CMakeLists.txt  package.xml
src/robotic_action/launch/: robotic_action_api_interface.launch.py
src/robotic_action/robotic_action/: rest_api.py
src/robotic_action/robotic_action/robotic_transformer_pytorch/: pytorch_launch.py
src/robotic_action/src/: task_server.cpp
src/robotic_actions/: CMakeLists.txt  package.xml
src/robotic_actions/launch/: action_server_JointAnkle_2_RPY.launch.py  action_server_XYZ_RPY_2_XYZ_RPY.launch.py  add_object.launch.py  demo_voice_command.launch.py  get_current_pose.launch.py  motion_planner.launch.py  moveit_group.rviz  planning.scene.launch.py  robot_model_and_robot_state.launch.py  robotic_action_api_interface.launch.py
src/robotic_actions/robotic_actions/: alexa_interface.py  rest_api.py  test.py
src/robotic_actions/src/: add_object.cpp  cartesian.cpp  demo_voice_commands.cpp  planning_scene.cpp  robot_model_and_robot_state.cpp  taskserver copy.cpp  taskserver.cpp  taskserver_joint_ankle_to_xyzrpy.cpp  taskserver_xyzrpy_to_xyzrpy.cpp
src/robotic_ai/: package.xml  setup.cfg  setup.py
src/robotic_ai/robotic_ai/: jax_model_node.py
src/robotic_ai_model/: package.xml  setup.cfg  setup.py
src/robotic_ai_model/robotic_ai_model/: get_groudtruth.py  task_client.old.py  task_client.py  task_client_fs100.py
src/robotic_msgs/: CMakeLists.txt  package.xml
src/robotic_msgs/action/: RoboticTasks.action  YaskawaTasks.action
src/robotic_opencv/: CMakeLists.txt  package.xml
src/robotic_opencv/launch/: opencv_subs.launch.py
src/robotic_opencv/src/: opencv_maintainer.cpp  opencv_subscriber_node.cpp
src/yaskawa_mh5_bringup/: CMakeLists.txt
src/yaskawa_mh5_bringup/launch/: yaskawa_simulation.launch.py
src/yaskawa_mh5_controller/: CMakeLists.txt  package.xml
src/yaskawa_mh5_controller/config/: mh5_ros2_controller.yaml  mh5_ros2_controller_effort.yaml
src/yaskawa_mh5_controller/launch/: controller.launch.py
src/yaskawa_mh5_description/: CMakeLists.txt  grippers.urdf copy.xacro  grippers.urdf2.xacro  package.xml
src/yaskawa_mh5_description/launch/: display.launch.py  gazebo.launch.py  object.launch.py
src/yaskawa_mh5_description/no_used/: robotiq_grippers.urdf.xacro  robotiq_grippers.urdf.xacro.origin
src/yaskawa_mh5_description/urdf/: TesseraVue_3D_sensor.urdf.xacro  TesseraVue_3D_sensor_bigger.urdf.xacro  TesseraVue_3D_sensor_bigger.urdf.xacro.origin  grippers.urdf.xacro  mh5.urdf.xacro  mh5_gazebo.urdf.xacro  mh5_gazebo.xacro  mh5_ros2_controller.urdf.xacro  mh5_ros2_controller_effort.urdf.xacro  robotiq_85_gripper.ros2_control.xacro  robotiq_85_gripper.ros2_control_effort.xacro  robotiq_85_gripper.transmission.effort.xacro  robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper_macro.urdf.xacro  robotiq_85_gripper_macro_effort.urdf.xacro  yaskawa.world  (+1 more)
src/yaskawa_mh5_moveit2/: CMakeLists.txt
src/yaskawa_moveit_2/: .setup_assistant  CMakeLists.txt  package.xml
src/yaskawa_msgs/: package.xml
src/yaskawa_resource_moveit_config/: CMakeLists.txt  package.xml
yaskawa_mh5_controller/: CMakeLists.txt
yaskawa_mh5_controller/config/: mh5_ros2_controller.yaml
yaskawa_mh5_controller/launch/: controller.launch.py
yaskawa_mh5_description/: CMakeLists.txt
yaskawa_mh5_description/launch/: display.launch.py  gazebo.launch.py
yaskawa_mh5_description/urdf/: mh5.urdf  mh5.urdf.xacro  mh5.xacro  mh5_gazebo.urdf.xacro  mh5_gazebo.xacro  mh5_macro.xacro  mh5_ros2_controller.urdf.xacro  mh5_ros2_controller.xacro  unused_mh5.urdf.xacro  unused_mh5_macro.urdf.xacro
yaskawa_mh5_moveit/: CMakeLists.txt  package.xml
yaskawa_mh5_moveit/config/: initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_ros2_controllers.yaml  yaskawa_mh5.srdf
yaskawa_mh5_moveit/launch/: moveit.launch.py
yaskawa_mh5_moveit2/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  yaskawa_mh5lf.srdf
yaskawa_moveit_2/config/: yaskawa_mh5lf.ros2_control.xacro
yaskawa_moveit_2/launch/: moveit_rviz.launch.py
yaskawa_msgs/: CMakeLists.txt
yaskawa_remote/: CMakeLists.txt  package.xml
yaskawa_remote/src/: task_server.cpp
yaskawa_remote/yaskawa_remote/: rest_api_yaskawa.py
(+131 files in other folders)
